clusters/sirius/apps/flex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
      - name: plex
        image: plexinc/pms-docker:latest
        ports:
        - name: plex-tcp-32400
          containerPort: 32400
          protocol: TCP
        - name: plex-tcp-3005
          containerPort: 3005
          protocol: TCP
        - name: plex-tcp-8324
          containerPort: 8324
          protocol: TCP
        # - name: plex-tcp-32469
        #   containerPort: 32469
        #   protocol: TCP
        # - name: plex-udp-1900
        #   containerPort: 1900
        #   protocol: UDP
        # - name: plex-udp-32410
        #   containerPort: 32410
        #   protocol: UDP
        # - name: plex-udp-32412
        #   containerPort: 32412
        #   protocol: UDP
        # - name: plex-udp-32413
        #   containerPort: 32413
        #   protocol: UDP
        # - name: plex-udp-32414
        #   containerPort: 32414
        #   protocol: UDP
        volumeMounts:
        - name: plex-data
          mountPath: /config
      volumes:
      - name: plex-data
        persistentVolumeClaim:
          claimName: plex-pvc
