clusters/sirius/apps/flex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  type: ClusterIP
  ports:
  - name: plex-tcp-32400
    port: 32400
    targetPort: plex-tcp-32400
    protocol: TCP
  - name: plex-tcp-3005
    port: 3005
    targetPort: plex-tcp-3005
    protocol: TCP
  - name: plex-tcp-8324
    port: 8324
    targetPort: plex-tcp-8324
    protocol: TCP
  selector:
    app: plex
