clusters/sirius/apps/flex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
  - hosts:
    - plex.sirius.moonblade.work
    secretName: plex-cert
  rules:
  - host: plex.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex
            port:
              name: plex-tcp-32400
